RESOLVED FIXED176329
[GTK] Wrong use of PLUGIN_ARCHITECTURE(X11) in several places
https://bugs.webkit.org/show_bug.cgi?id=176329
Summary [GTK] Wrong use of PLUGIN_ARCHITECTURE(X11) in several places
Carlos Garcia Campos
Reported 2017-09-04 06:18:55 PDT
We are using PLUGIN_ARCHITECTURE(X11) in several places where we shoudl actually be using PLATFORM(X11). This is confusing because PLUGIN_ARCHITECTURE(X11) is no longer specific to X11, it will be renamed as UNIX in a follow up patch.
Attachments
Patch (24.97 KB, patch)
2017-09-04 06:26 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-09-04 06:26:46 PDT
Carlos Garcia Campos
Comment 2 2017-09-05 00:17:00 PDT
Note You need to log in before you can comment on or make changes to this bug.