Source/WebKit/PluginProcess/PluginControllerProxy.h
@@ -114,7 +114,7 @@ private:
     bool getAuthenticationInfo(const WebCore::ProtectionSpace&, String& username, String& password) override;
     void protectPluginFromDestruction() override;
     void unprotectPluginFromDestruction() override;
-#if PLUGIN_ARCHITECTURE(X11)
+#if PLATFORM(X11)
     uint64_t createPluginContainer() override;
     void windowedPluginGeometryDidChange(const WebCore::IntRect& frameRect, const WebCore::IntRect& clipRect, uint64_t windowID) override;
     void windowedPluginVisibilityDidChange(bool isVisible, uint64_t windowID) override;
